Filter top-level resource keys using tree, and delay loading full objects.