@@ -24,9 +24,11 @@ import net.ripe.db.whois.api.rdap.domain.RdapObject;
 import net.ripe.db.whois.api.rdap.domain.Remark;
 import net.ripe.db.whois.api.rdap.domain.Role;
 import net.ripe.db.whois.api.rdap.domain.SearchResult;
+import net.ripe.db.whois.api.rdap.domain.Status;
 import net.ripe.db.whois.api.rdap.domain.vcard.VCard;
 import net.ripe.db.whois.common.DateUtil;
 import net.ripe.db.whois.common.dao.RpslObjectDao;
+import net.ripe.db.whois.common.dao.RpslObjectInfo;
 import net.ripe.db.whois.common.domain.CIString;
 import net.ripe.db.whois.common.ip.IpInterval;
 import net.ripe.db.whois.common.ip.Ipv4Resource;
@@ -57,11 +59,10 @@ import org.springframework.stereotype.Component;
 import javax.annotation.Nullable;
 import javax.ws.rs.InternalServerErrorException;
 import java.time.LocalDateTime;
-import java.util.Arrays;
-import java.util.HashMap;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
+import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -153,9 +154,11 @@ class RdapObjectMapper {
         return mapCommons(searchResult, requestUrl);
     }
 
-    public Object mapDomainEntity(final String requestUrl, final RpslObject domainResult,
-                                  final RpslObject inetnumResult){
-        final RdapObject domain = getRdapObject(requestUrl, domainResult, Optional.empty());
+    public Object mapDomainEntity(
+                final String requestUrl,
+                final RpslObject domainResult,
+                final RpslObject inetnumResult) {
+        final RdapObject domain = getRdapObject(requestUrl, domainResult, null);
         if (inetnumResult != null) {
             domain.setNetwork((Ip) getRdapObject(requestUrl, inetnumResult, null));
         }
@@ -163,24 +166,29 @@ class RdapObjectMapper {
         rdapObject.getLinks().add(COPYRIGHT_LINK);
         return mapCommonConformances(rdapObject);
     }
-    public Object mapOrganisationEntity(final String requestUrl, final RpslObject organisationObject,
-                                        final Stream<RpslObject> autnumResult,
-                                        final Stream<RpslObject> inetnumResult,
-                                        final Stream<RpslObject> inet6numResult, final int maxResultSize){
-         final List<Autnum> autnums = autnumResult.map(autnumRpsl -> (Autnum)getRdapObject(requestUrl,
-                autnumRpsl,
-                Optional.empty())).collect(Collectors.toList());
 
-        final List<Ip> networks = filterTopLevelIps(requestUrl, inetnumResult, inet6numResult, maxResultSize);
+    public Object mapOrganisationEntity(final String requestUrl,
+                                        final RpslObject organisationObject,
+                                        final List<RpslObjectInfo> autnumResult,
+                                        final List<RpslObjectInfo> inetnumResult,
+                                        final List<RpslObjectInfo> inet6numResult,
+                                        final int maxResultSize) {
 
-        final RdapObject organisation = getRdapObject(requestUrl, organisationObject,Optional.empty());
+        final List<Autnum> autnums = mapAutnums(requestUrl, autnumResult);
 
-        if (networks.size() > maxResultSize) {
+        final List<RpslObjectInfo> topLevelInetnums = new TopLevelFilter<Ipv4Resource>(inetnumResult).getTopLevelValues();
+        final List<RpslObjectInfo> topLevelInet6nums = new TopLevelFilter<Ipv4Resource>(inet6numResult).getTopLevelValues();
+
+        final List<Ip> networks = mapNetworks(requestUrl, topLevelInetnums, topLevelInet6nums);
+
+        final RdapObject organisation = getRdapObject(requestUrl, organisationObject, null);
+
+        if ((topLevelInetnums.size() + topLevelInet6nums.size()) > maxResultSize) {
             final Notice outOfLimitNotice = new Notice();
-            outOfLimitNotice.setTitle(String.format("limited networks attribute results to %s maximum" ,
-                    maxResultSize));
+            outOfLimitNotice.setTitle(String.format("limited networks attribute results to %s maximum" , maxResultSize));
             organisation.getNotices().add(outOfLimitNotice);
         }
+
         organisation.setNetworks(networks);
         organisation.setAutnums(autnums);
 
@@ -202,17 +210,46 @@ class RdapObjectMapper {
     public RdapObject mapHelp(final String requestUrl) {
         final RdapObject rdapObject = mapCommonNoticesAndPort(new RdapObject(), requestUrl);
         mapCommonLinks(rdapObject, requestUrl);
-        rdapObject.getRdapConformance().addAll(Stream.of(RdapConformance.values()).map(RdapConformance::getValue).collect(Collectors.toList()));
+        rdapObject.getRdapConformance().addAll(Stream.of(RdapConformance.values()).map(RdapConformance::getValue).toList());
         return rdapObject;
     }
 
-    private List<Ip> filterTopLevelIps(String requestUrl, Stream<RpslObject> inetnumResult,
-                                       Stream<RpslObject> inet6numResult, int maxResultSize) {
-        return Stream.concat((Stream<RpslObject>) new TopLevelFilter(inetnumResult).getTopLevelValues().stream(),
-                        (Stream<RpslObject>) new TopLevelFilter(inet6numResult).getTopLevelValues().stream())
-                .limit(maxResultSize)
-                .map(topLevelRpsl -> (Ip) getRdapObject(requestUrl, topLevelRpsl, Optional.empty())).collect(Collectors.toList());
+    private List<Autnum> mapAutnums(
+                final String requestUrl,
+                final List<RpslObjectInfo> autnumResult) {
+        return autnumResult.stream()
+                .map(rpslObjectInfo -> getRpslObject(rpslObjectInfo))
+                .filter(Objects::nonNull)
+                .map(rpslObject -> (Autnum)getRdapObject(requestUrl, rpslObject, null))
+                .collect(Collectors.toList());
     }
+
+    private List<Ip> mapNetworks(
+                final String requestUrl,
+                final List<RpslObjectInfo> inetnums,
+                final List<RpslObjectInfo> inet6nums) {
+        return Stream.concat(inet6nums.stream(), inetnums.stream())
+                .limit(100L)
+                .map(this::getRpslObject)
+                .filter(Objects::nonNull)
+                .map(rpslObject -> (Ip)getRdapObject(requestUrl, rpslObject, null))
+                .toList();
+    }
+
+    @Nullable
+    private RpslObject getRpslObject(final RpslObjectInfo rpslObjectInfo) {
+        return getRpslObject(rpslObjectInfo.getObjectId());
+    }
+
+    @Nullable
+    private RpslObject getRpslObject(final int objectId) {
+        try {
+            return rpslObjectDao.getById(objectId);
+        } catch (DataAccessException e) {
+            return null;
+        }
+    }
+
     private RdapObject getRdapObject(final String requestUrl,
                                      final RpslObject rpslObject,
                                      @Nullable final AbuseContact abuseContact) {
@@ -297,37 +334,28 @@ class RdapObjectMapper {
         ip.setEndAddress(toIpRange(ipInterval).end().toString());
         ip.setName(rpslObject.getValueForAttribute(AttributeType.NETNAME).toString());
         ip.setType(rpslObject.getValueForAttribute(AttributeType.STATUS).toString());
-
-        if(!isIANABlock(rpslObject)) {
+        if (!isIANABlock(rpslObject)) {
             ip.setParentHandle(lookupParentHandle(ipInterval));
         }
-
-        ip.setStatus(getResourceStatus(rpslObject));
+        ip.setStatus(Collections.singletonList(getResourceStatus(rpslObject).getValue()));
         handleLanguageAttribute(rpslObject, ip);
         handleCountryAttribute(rpslObject, ip);
-
         ip.setCidr0_cidrs(getIpCidr0Notation(toIpRange(ipInterval)));
         ip.getEntitySearchResults().addAll(createContactEntities(rpslObject));
-
         return ip;
     }
 
-    private List<Object> getResourceStatus(final RpslObject rpslObject) {
-
+    private Status getResourceStatus(final RpslObject rpslObject) {
         switch (rpslObject.getType()) {
             case AUT_NUM:
                 final Long asn = Long.parseLong(StringUtils.substringAfter(rpslObject.getKey().toUpperCase(), "AS"));
-                return reservedResources.isReservedAsNumber(asn) ? Arrays.asList(RESERVED.getValue()) : Arrays.asList(ACTIVE.getValue());
-
+                return reservedResources.isReservedAsNumber(asn) ? RESERVED : ACTIVE;
             case AS_BLOCK:
-                return reservedResources.isReservedAsBlock(rpslObject.getKey().toUpperCase()) ? Arrays.asList(RESERVED.getValue()) : Arrays.asList(ACTIVE.getValue());
-
+                return reservedResources.isReservedAsBlock(rpslObject.getKey().toUpperCase()) ? RESERVED : ACTIVE;
             case INETNUM:
             case INET6NUM:
-                return  isIANABlock(rpslObject) ? Arrays.asList(ADMINISTRATIVE.getValue()) :
-                        reservedResources.isBogon(rpslObject.getKey().toString()) ? Arrays.asList(RESERVED.getValue()) :
-                                Arrays.asList(ACTIVE.getValue());
-
+                return  isIANABlock(rpslObject) ? ADMINISTRATIVE :
+                        reservedResources.isBogon(rpslObject.getKey().toString()) ? RESERVED : ACTIVE;
             default:
                 throw new IllegalArgumentException("Unhandled object type: " + rpslObject.getType());
         }
@@ -364,18 +392,12 @@ class RdapObjectMapper {
         return Ipv6Range.from(ipv6Resource.begin()).to(ipv6Resource.end());
     }
 
-    @Nullable
     private String lookupParentHandle(final IpInterval ipInterval) {
-        final RpslObject parentRpslObject;
-        try {
-            parentRpslObject = rpslObjectDao.getById(lookupParentIpEntry(ipInterval).getObjectId());
-        } catch (DataAccessException e) {
-            throw new IllegalStateException("Couldn't get parent for " + ipInterval.toString());
+        final RpslObject parentRpslObject = getRpslObject(lookupParentIpEntry(ipInterval).getObjectId());
+        if (parentRpslObject == null) {
+            throw new IllegalStateException("No parentHandle for " + ipInterval);
         }
 
-        if (parentRpslObject == null) {
-            throw new IllegalStateException("No parentHandle for " + ipInterval.toString());
-        }
 
         return parentRpslObject.getKey().toString();
     }
@@ -384,19 +406,20 @@ class RdapObjectMapper {
         if (ipInterval instanceof Ipv4Resource) {
             final List<Ipv4Entry> firstLessSpecific = ipv4Tree.findFirstLessSpecific((Ipv4Resource) ipInterval);
             if (firstLessSpecific.isEmpty()) {
-                throw new IllegalStateException("No parent for " + ipInterval.toString());
+                throw new IllegalStateException("No parent for " + ipInterval);
             }
             return firstLessSpecific.get(0);
-        }
-
-        if (ipInterval instanceof Ipv6Resource) {
-            final List<Ipv6Entry> firstLessSpecific = ipv6Tree.findFirstLessSpecific((Ipv6Resource) ipInterval);
-            if (firstLessSpecific.isEmpty()) {
-                throw new IllegalStateException("No parent for " + ipInterval.toString());
+        } else {
+            if (ipInterval instanceof Ipv6Resource) {
+                final List<Ipv6Entry> firstLessSpecific = ipv6Tree.findFirstLessSpecific((Ipv6Resource) ipInterval);
+                if (firstLessSpecific.isEmpty()) {
+                    throw new IllegalStateException("No parent for " + ipInterval);
+                }
+                return firstLessSpecific.get(0);
+            } else {
+                throw new IllegalStateException("Unknown interval type " + ipInterval.getClass().getName());
             }
-            return firstLessSpecific.get(0);
         }
-        throw new IllegalStateException("Unknown interval type " + ipInterval.getClass().getName());
     }
 
     private static Remark createRemark(final RpslObject rpslObject) {
@@ -411,10 +434,8 @@ class RdapObjectMapper {
 
     private static Remark createRemark(final CIString key, final AbuseContact abuseContact) {
         return new Remark(
-           Lists.newArrayList(
-               QueryMessages.unvalidatedAbuseCShown(key, abuseContact.getAbuseMailbox(), abuseContact.getOrgId()).toString().replaceAll("% ", "")
-           )
-        );
+           Collections.singletonList(
+               QueryMessages.unvalidatedAbuseCShown(key, abuseContact.getAbuseMailbox(), abuseContact.getOrgId()).toString().replaceAll("% ", "")));
     }
 
     private static boolean hasDescriptions(final RpslObject rpslObject) {
@@ -460,7 +481,7 @@ class RdapObjectMapper {
         return createEntity(rpslObject, null);
     }
 
-    private static Entity createEntity(final RpslObject rpslObject, final Role role) {
+    private static Entity createEntity(final RpslObject rpslObject, @Nullable final Role role) {
         final Entity entity = new Entity();
         entity.setHandle(rpslObject.getKey().toString());
         if (role != null) {
@@ -481,8 +502,7 @@ class RdapObjectMapper {
         final Long asNumber = Long.parseLong(StringUtils.substringAfter(rpslObject.getKey().toUpperCase(), "AS"));
         autnum.setStartAutnum(asNumber);
         autnum.setEndAutnum(asNumber);
-        autnum.setStatus(getResourceStatus(rpslObject));
-
+        autnum.setStatus(Collections.singletonList(getResourceStatus(rpslObject).getValue()));
         autnum.getEntitySearchResults().addAll(createContactEntities(rpslObject));
         autnum.getRdapConformance().add(RdapConformance.FLAT_MODEL.getValue());
         return autnum;
@@ -490,18 +510,15 @@ class RdapObjectMapper {
 
     private Autnum createAsBlockResponse(final RpslObject rpslObject) {
         final Autnum autnum = new Autnum();
-
         final String key = rpslObject.getValueForAttribute(AttributeType.AS_BLOCK).toString();
         final AsBlockRange blockRange = getAsBlockRange(key);
-
         autnum.setHandle(blockRange.getBeginWithPrefix());
         //TODO :check what should be the name
-        String asName = String.join("-", blockRange.getBeginWithPrefix(), blockRange.getEndWithPrefix());
+        final String asName = String.join("-", blockRange.getBeginWithPrefix(), blockRange.getEndWithPrefix());
         autnum.setName(asName);
         autnum.setStartAutnum(blockRange.getBegin());
         autnum.setEndAutnum(blockRange.getEnd());
-        autnum.setStatus(getResourceStatus(rpslObject));
-
+        autnum.setStatus(Collections.singletonList(getResourceStatus(rpslObject).getValue()));
         autnum.getEntitySearchResults().addAll(createContactEntities(rpslObject));
         return autnum;
     }
@@ -511,7 +528,7 @@ class RdapObjectMapper {
         domain.setHandle(rpslObject.getKey().toString());
         domain.setLdhName(IpInterval.addTrailingDot(rpslObject.getKey().toString()));
 
-        final Map<CIString, Set<IpInterval>> hostnameMap = new HashMap<>();
+        final Map<CIString, Set<IpInterval>> hostnameMap = Maps.newHashMap();
 
         for (final CIString nserverValue : rpslObject.getValuesForAttribute(AttributeType.NSERVER)) {
             final NServer nserver = NServer.parse(nserverValue.toString());
@@ -612,21 +629,19 @@ class RdapObjectMapper {
     }
 
     private static void handleLanguageAttribute(final RpslObject rpslObject, final RdapObject rdapObject) {
-        if (!rpslObject.containsAttribute(AttributeType.LANGUAGE)) {
+        final List<RpslAttribute> languages = rpslObject.findAttributes(AttributeType.LANGUAGE);
+        if (languages.isEmpty()) {
             return;
         }
-
-        List<RpslAttribute> languages = rpslObject.findAttributes(AttributeType.LANGUAGE);
-        rdapObject.setLang(rpslObject.findAttributes(AttributeType.LANGUAGE).get(0).getCleanValue().toString());
+        rdapObject.setLang(languages.get(0).getCleanValue().toString());
         addNoticeForMultipleValues(rdapObject, AttributeType.LANGUAGE, languages, rpslObject.getKey().toString());
     }
 
     private static void handleCountryAttribute(final RpslObject rpslObject, final Ip ip) {
-        if (!rpslObject.containsAttribute(AttributeType.COUNTRY)) {
+        final List<RpslAttribute> countries = rpslObject.findAttributes(AttributeType.COUNTRY);
+        if (countries.isEmpty()) {
             return;
         }
-
-        List<RpslAttribute> countries = rpslObject.findAttributes(AttributeType.COUNTRY);
         ip.setCountry(countries.get(0).getCleanValue().toString());
         addNoticeForMultipleValues(ip, AttributeType.COUNTRY, countries, ip.getHandle());
     }
@@ -636,7 +651,7 @@ class RdapObjectMapper {
             return;
         }
 
-        final String commaSeperatedValues = values.stream().map( value -> value.getCleanValue()).collect(Collectors.joining(", "));
+        final String commaSeperatedValues = values.stream().map(RpslAttribute::getCleanValue).collect(Collectors.joining(", "));
         final String title = String.format("Multiple %s attributes found", type.getName());
         final String desc = String.format("There are multiple %s attributes %s in %s, but only the first %s %s was returned.", type.getName(), commaSeperatedValues, key, type.getName(), values.get(0).getCleanValue());
 
